# three-d-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/mesh/: bunny.hpp
res/shaders/default/: default.fs.hpp  default.vs  default.vs.hpp
src/: main.cpp  main.h  main.hpp
src/camera/: Camera.cpp  Camera.h  camera.hpp
src/mesh/: surface.h
src/pipeline/: Renderer.cpp  Renderer.h
src/render/: batcher.cpp  batcher.h  mesh.cpp  mesh.h  mesh.hpp  vertex.h  vertex.hpp
src/render/batcher/: batcher.cpp  batcher.h  batcher.hpp
src/render/renderer/: renderer.cpp  renderer.h  renderer.hpp
src/shader/: shader.cpp  shader.h
